--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html>
   <head>
     <title>Namaste React</title>
-    <link rel="stylesheet" href="./App.css" ></link>
+    <link rel="stylesheet" href="./index.css" ></link>
   </head>
   <body>
     <div id="root"></div>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    <script src="./src/App.js" type="module" ></script>
   </body>
 </html>
